# CS4400

./: .ftpconfig  sftp-config.json  test.c
HW1/: matchlab.c
HW2/: bomb152.tar  bomb157.tar  bomb158.tar  bomb159.tar
HW2/bomb152/: README  bomb  bomb-assembly  psol.txt
HW2/bomb157/: README  bomb  bomb-assembly
HW2/bomb158/: README  bomb
HW2/bomb159/: README  bomb  psol.txt
HW3/perflab-handout/: kernels.c
HW4/linklab-handout/: 1  2  Makefile  decode.c  decode.h  objdump_ex1  redact.c  test.rkt
HW5/shlab-handout/: whoosh (Kojis-MacBook-Pro.local's conflicted copy 2017-11-10).c  whoosh.c
HW5/shlab-handout/scripts/0-single/: 1-steps.whoosh
HW5/shlab-handout/scripts/1-variable/: 5-fail.whoosh
HW5/shlab-handout/scripts/2-and/: 2-kill.whoosh
HW6/malloclab-handout/: Makefile  mdriver  mm.c
HW6/mmap/: Makefile  README.txt  chaos.c  chaos.h  main.c  main_done.c
HW7/servlab-handout/: friendlist.c
lab3/: test.txt
malloclab/: CMakeLists.txt  mdriver  mdriver.c  mm.c
